Name:               llvmvf
Version:            1.0
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           LLVM Verification Framework
Description:        LLVM Verification Framework
Build-Type:         Simple


Executable llvmvf
    Main-Is:          Main.hs
    Build-Depends:    base          >= 4 && < 5
                    , containers    >= 0.2
                    , filepath
                    , uu-parsinglib >= 2.7.1
                    , mtl           >= 1.1.0.2
                    , fgl           >= 5.4.2.3
                    , uulib         >= 0.9.14
                    , cmdargs
                    , transformers 
                    , llvm-base
                    , llvm
                    , smtlib        == 1.0
                    , demangler     == 1.0
                    , blaze-html
                    , text
    Hs-Source-Dirs:   src/
    include-dirs: include
    C-Sources:        cbits/demangler.cpp
    Extensions:       TypeOperators, FlexibleInstances, TypeSynonymInstances, DeriveDataTypeable, CPP
    ghc-options:      -O3 -rtsopts
    extra-libraries: stdc++
