Name:               llvmvf
Version:            1.0
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           LLVM Verification Framework
Description:        LLVM Verification Framework
Build-Type:         Simple


Executable llvmvf
    Main-Is:          Main.hs
    Build-Depends:    base          >= 4 && < 5
                    , containers    >= 0.2
                    , filepath
                    , uu-parsinglib >= 2.7.1
                    , mtl           == 2.1.1 
                    , fgl           
                    , uulib         >= 0.9.14
                    , cmdargs
                    , transformers 
                    , llvm-base
                    , llvm          == 3.0.1.0
                    , smtlib        == 1.0
                    , demangler     == 1.0
                    , blaze-html
                    , text
                    , base-unicode-symbols
    Hs-Source-Dirs:   src/
    include-dirs: include
    C-Sources:        cbits/demangler.cpp
    Extensions:       TypeOperators, FlexibleInstances, TypeSynonymInstances, DeriveDataTypeable, CPP
    ghc-options:      -O3 -rtsopts
    extra-libraries: stdc++
